Update ram